--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "prettier.printWidth": 100,
   "prettier.singleQuote": true,
-  "editor.formatOnSave": true,
   "typescript.format.semicolons": "insert",
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
