--- a/package.json
+++ b/package.json
@@ -1,61 +1,66 @@
 {
-    "name": "t3-hello",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "build": "next build",
-        "dev": "next dev",
-        "postinstall": "prisma generate",
-        "lint": "next lint",
-        "start": "next start"
-    },
-    "dependencies": {
-        "@emotion/react": "^11.10.6",
-        "@emotion/server": "^11.10.0",
-        "@mantine/carousel": "^5.10.5",
-        "@mantine/core": "^5.10.5",
-        "@mantine/dates": "^5.10.5",
-        "@mantine/dropzone": "^5.10.5",
-        "@mantine/form": "^5.10.5",
-        "@mantine/hooks": "^5.10.5",
-        "@mantine/modals": "^5.10.5",
-        "@mantine/next": "^5.10.5",
-        "@mantine/notifications": "^5.10.5",
-        "@mantine/nprogress": "^5.10.5",
-        "@next-auth/prisma-adapter": "^1.0.5",
-        "@prisma/client": "^4.9.0",
-        "@tanstack/react-query": "^4.20.2",
-        "@trpc/client": "^10.9.0",
-        "@trpc/next": "^10.9.0",
-        "@trpc/react-query": "^10.9.0",
-        "@trpc/server": "^10.9.0",
-        "dayjs": "^1.11.7",
-        "embla-carousel-react": "^7.0.9",
-        "next": "13.1.6",
-        "next-auth": "^4.19.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "superjson": "1.9.1",
-        "zod": "^3.20.2"
-    },
-    "devDependencies": {
-        "@types/node": "^18.11.18",
-        "@types/prettier": "^2.7.2",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.10",
-        "@typescript-eslint/eslint-plugin": "^5.47.1",
-        "@typescript-eslint/parser": "^5.47.1",
-        "autoprefixer": "^10.4.7",
-        "eslint": "^8.30.0",
-        "eslint-config-next": "13.1.6",
-        "postcss": "^8.4.14",
-        "prettier": "^2.8.1",
-        "prettier-plugin-tailwindcss": "^0.2.1",
-        "prisma": "^4.9.0",
-        "tailwindcss": "^3.2.0",
-        "typescript": "^4.9.4"
-    },
-    "ct3aMetadata": {
-        "initVersion": "7.5.2"
-    }
+  "name": "t3-hello",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start",
+    "db-seed": "NODE_ENV=development prisma db seed"
+  },
+  "pnpmrisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.10.5",
+    "@mantine/core": "^5.10.5",
+    "@mantine/dates": "^5.10.5",
+    "@mantine/dropzone": "^5.10.5",
+    "@mantine/form": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/modals": "^5.10.5",
+    "@mantine/next": "^5.10.5",
+    "@mantine/notifications": "^5.10.5",
+    "@mantine/nprogress": "^5.10.5",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.9.0",
+    "@tanstack/react-query": "^4.20.2",
+    "@trpc/client": "^10.9.0",
+    "@trpc/next": "^10.9.0",
+    "@trpc/react-query": "^10.9.0",
+    "@trpc/server": "^10.9.0",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.9",
+    "next": "13.1.6",
+    "next-auth": "^4.19.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "superjson": "1.9.1",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "13.1.6",
+    "postcss": "^8.4.14",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.9.0",
+    "tailwindcss": "^3.2.0",
+    "tsx": "^3.12.3",
+    "typescript": "^4.9.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.5.2"
+  }
 }
