--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mantine/nprogress": "^5.10.5",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@tabler/icons-react": "^2.8.0",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
